--- a/MongoDBConnector.csproj
+++ b/MongoDBConnector.csproj
@@ -68,8 +68,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBCollection.cs" />
+    <Compile Include="IDBCollection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuperHeroDBCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
